# skrills

./: .gitignore  .markdownlint.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN-dependency-resolution.md  FPF-REVIEW.md  ISSUES_PLAN.md  Makefile  README.md  deny.toml  skrills-demo.html  skrills-portal.html
book/: book.toml
crates/analyze/: Cargo.toml
crates/analyze/benches/: tick_budget.rs
crates/analyze/src/: deps.rs  graph.rs  lib.rs  optimize.rs  resolve.rs  tokens.rs
crates/analyze/src/cold_window/: alert.rs  cadence.rs  diff.rs  engine.rs  mod.rs  plugin_health.rs  skill_collector.rs  traits.rs
crates/analyze/src/resolve/: graph.rs  mod.rs  resolver.rs  types.rs
crates/analyze/tests/: cadence.rs  chaos.rs  tick_budget_floor.rs  token_attribution.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: cli_dispatch_smoke.rs  sync_all.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/dashboard/: Cargo.toml  README.md
crates/dashboard/src/: app.rs  events.rs  lib.rs  ui.rs
crates/dashboard/src/cold_window/: alert_pane.rs  focus.rs  hint_pane.rs  keymap.rs  mod.rs  overlay.rs  research_pane.rs  state.rs  status_bar.rs  tui.rs
crates/dashboard/src/cold_window/tui/: input.rs  layout.rs  mod.rs  render.rs  runner.rs  tests.rs
crates/dashboard/tests/: ui_rendering.rs
crates/discovery/: Cargo.toml  README.md
crates/discovery/src/: error.rs  lib.rs  scanner.rs  types.rs
crates/discovery/tests/: discover_smoke.rs
crates/intelligence/: Cargo.toml  README.md
crates/intelligence/src/: cold_window_hints.rs  error.rs  lib.rs  scaffolding.rs  test_support.rs  types.rs
crates/intelligence/src/context/: dependencies.rs  detector.rs  git_context.rs  mod.rs
crates/intelligence/src/create/: cli_detector.rs  empirical.rs  github_search.rs  llm_generator.rs  mod.rs
crates/intelligence/src/recommend/: comparative.rs  explainer.rs  mod.rs  scorer.rs  similarity.rs
crates/intelligence/src/templates/: code-review.md  debugging.md  documentation.md  refactoring.md  testing.md
crates/intelligence/src/usage/: analytics.rs  behavioral.rs  claude_parser.rs  codex_parser.rs  mod.rs
crates/metrics/: Cargo.toml  README.md
crates/metrics/src/: baseline.rs  collector.rs  error.rs  lib.rs  schema.rs  types.rs
crates/server/: AGENTS.md  Cargo.toml  README.md
crates/server/src/: app.rs  app_tests.rs  autoload.rs  cache.rs  cli.rs  cold_window_cli.rs  config.rs  discovery.rs  doctor.rs  handler.rs  http_transport.rs  lib.rs  manifest.rs  metrics_types.rs  runtime.rs  setup.rs  signals.rs  skill_trace.rs  sync.rs  test_support.rs  tls_auto.rs  tool_schemas.rs  tui.rs
crates/server/src/api/: cold_window.rs  mcp_servers.rs  metrics.rs  mod.rs  rules.rs  skills.rs
crates/server/src/app/: dispatcher.rs  intelligence.rs  mcp_registry.rs  mod.rs  research.rs  skill_recommendations.rs  tests.rs  tools.rs
crates/server/src/app/tests/: config.rs  dependency.rs  intelligence.rs  mcp.rs  mod.rs  research.rs  resource.rs  search.rs  sync.rs  trace.rs  validation.rs
crates/server/src/cli/: enums.rs  mod.rs
crates/server/src/commands/: agent.rs  analyze.rs  cert.rs  diff.rs  intelligence.rs  metrics.rs  mod.rs  multi_cli_agent.rs  pin.rs  recommend.rs  resolve.rs  serve.rs  setup.rs  skill_management.rs  sync.rs  validate.rs
crates/server/src/commands/skill/: catalog.rs  deprecation.rs  import.rs  mod.rs  pre_commit.rs  profiling.rs  rollback.rs  scoring.rs  sync_pull.rs  usage_report.rs
crates/server/src/mcp_gateway/: mod.rs  registry.rs  stats.rs  tools.rs
crates/server/src/setup/: tests.rs
crates/server/src/ui/: app.rs  dashboard.js  mod.rs
crates/server/static/: index.html  style.css
crates/server/tests/: analytics_persistence_integration.rs  cold_window_first_paint.rs  cold_window_parity.rs  dashboard_api_integration.rs  dashboard_browser_integration.rs  http_transport_integration.rs  runtime_tools.rs  subagents_end_to_end.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: kill_switch.rs  lib.rs  serde_impls.rs  types.rs
crates/state/: Cargo.toml  README.md
crates/state/src/: cache.rs  env.rs  lib.rs  network.rs  persistence.rs
crates/state/tests/: persistence_smoke.rs
crates/subagents/: Cargo.toml  README.md
crates/subagents/src/: cli_detection.rs  lib.rs  registry.rs  service.rs  settings.rs  store.rs  tool_schemas.rs
crates/subagents/src/backend/: claude.rs  cli.rs  codex.rs  config.rs  mod.rs
crates/subagents/tests/: integration_test.rs  store_reload.rs  subagent_basic_tests.rs  subagent_service_integration.rs
crates/sync/: Cargo.toml
crates/sync/src/: common.rs  conflict.rs  error.rs  lib.rs  models.rs  orchestrator.rs  platform_routing.rs  preview.rs  report.rs  snapshot.rs  validation.rs
crates/sync/src/adapters/: claude.rs  codex.rs  copilot.rs  external.rs  mod.rs  tests_common.rs  traits.rs  utils.rs
crates/sync/src/adapters/claude/: agents.rs  commands.rs  hooks.rs  instructions.rs  mod.rs  plugin_assets.rs  settings.rs  skills.rs
crates/sync/src/adapters/copilot/: agents.rs  commands.rs  mcp.rs  mod.rs  paths.rs  preferences.rs  skills.rs  tests.rs  utils.rs
crates/sync/src/adapters/cursor/: agents.rs  commands.rs  hooks.rs  mcp.rs  mod.rs  paths.rs  rules.rs  skills.rs  tests.rs  utils.rs
crates/sync/tests/: copilot_sync_integration.rs  cursor_sync_integration.rs  kill_switch_lock.rs  skills_sync_comprehensive.rs  sync_integration.rs  sync_skip_existing_tests.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: cold_window_fixtures.rs  lib.rs
crates/test-utils/tests/: release_consistency.rs
crates/tome/: Cargo.toml
crates/tome/src/: cache.rs  citations.rs  dispatcher.rs  error.rs  knowledge_graph.rs  lib.rs  models.rs  rate_limit.rs  triz.rs
crates/tome/src/clients/: arxiv.rs  crossref.rs  hn_algolia.rs  mod.rs  openalex.rs  semantic_scholar.rs  unpaywall.rs
crates/tome/tests/: dispatcher_concurrency.rs
crates/validate/: Cargo.toml
crates/validate/src/: autofix.rs  claude.rs  codex.rs  common.rs  copilot.rs  frontmatter.rs  lib.rs  watch.rs
(+141 files in other folders)
