[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
rmcp = { version = "0.9", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha2 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
pathdiff = "0.2"
dirs = "5"
libc = "0.2"
dialoguer = "0.11"
tempfile = "3"
toml = "0.8"
hex = "0.4"
