[workspace]
members = [
    "crates/discovery",
    "crates/state",
    "crates/server",
    "crates/cli",
    "crates/sync",
    "crates/subagents",
    "crates/validate",
    "crates/analyze",
    "crates/intelligence",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# rmcp updated to 0.10.0 which uses pastey instead of paste (maintained)
rmcp = { version = "0.10", features = ["server", "transport-io", "transport-streamable-http-server", "tower"] }
pastey = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
walkdir = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"], default-features = false }
sha2 = "0.10"
blake2 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
pathdiff = "0.2"
dirs = "6"
libc = "0.2"
inquire = "0.9"
tempfile = "3.11"
toml = "0.8"
semver = "1"
flate2 = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "rustls-tls"] }
rayon = "1.10"
parking_lot = "0.12"
