[package]
name = "skrills-analyze"
version = "0.3.4"
edition.workspace = true
description = "Skill analysis: token counting, dependencies, and optimization"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
anyhow = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
skrills-validate = { path = "../validate", version = "0.3.4" }
skrills-discovery = { path = "../discovery", version = "0.3.4" }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
