[package]
name = "skrills-analyze"
version = "0.4.7"
edition.workspace = true
description = "Skill analysis: token counting, dependencies, and optimization"
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "../../README.md"
keywords = ["mcp", "skills", "analysis", "tokens", "optimization"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
anyhow = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
skrills-validate = { path = "../validate", version = "0.4.7" }
skrills-discovery = { path = "../discovery", version = "0.4.7" }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
