[package]
name = "skrills-analyze"
version = "0.8.0"
edition.workspace = true
description = "Skill analysis: token counting, dependencies, and optimization"
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "../../README.md"
keywords = ["mcp", "skills", "analysis", "tokens", "optimization"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
walkdir = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
tracing = { workspace = true }
skrills-validate = { path = "../validate", version = "0.8.0" }
skrills-discovery = { path = "../discovery", version = "0.8.0" }
skrills-snapshot = { path = "../snapshot", version = "0.8.0" }
skrills-intelligence = { path = "../intelligence", version = "0.8.0" }
skrills-tome = { path = "../tome", version = "0.8.0" }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
num_cpus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
skrills_test_utils = { path = "../test-utils" }
