[package]
name = "skrills"
version = "0.5.6"
edition = "2021"
description = "A command-line interface and MCP server for managing local SKILL.md files."
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "README.md"
keywords = ["mcp", "cli", "skills", "agents", "codex"]
categories = ["command-line-utilities", "development-tools"]

[features]
# Ship CLI with subagents and HTTP transport enabled by default.
# Required so release binaries from GitHub have full functionality.
default = ["subagents", "http-transport"]
subagents = ["skrills-server/subagents"]
http-transport = ["skrills-server/http-transport"]

[dependencies]
skrills-server = { path = "../server", version = "0.5.5" }
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
scopeguard = "1.2"
