[package]
name = "codex-mcp-skills-core"
version = "0.1.2"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
base64.workspace = true
clap.workspace = true
pathdiff.workspace = true
dirs.workspace = true
libc.workspace = true
dialoguer.workspace = true
notify = { version = "6", default-features = true, optional = true }

[features]
default = ["watch"]
watch = ["notify"]

[dev-dependencies]
tempfile.workspace = true
