[package]
name = "skrills-dashboard"
version = "0.8.0"
edition.workspace = true
description = "Terminal UI dashboard for skrills metrics and monitoring"
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "README.md"
keywords = ["mcp", "skills", "dashboard", "tui", "metrics"]
categories = ["development-tools", "visualization"]
publish = true

[dependencies]
skrills-metrics = { path = "../metrics", version = "0.8.0" }
skrills-discovery = { path = "../discovery", version = "0.8.0" }
skrills_sync = { path = "../sync", version = "0.8.0" }
skrills-snapshot = { path = "../snapshot", version = "0.8.0" }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async
tokio = { workspace = true, features = ["sync", "time", "signal"] }
futures = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Time
time = { workspace = true }

# Directories
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = "1"
