[package]
name = "codex-mcp-skills-discovery"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true
pathdiff.workspace = true
base64.workspace = true
tracing.workspace = true
