[package]
name = "skrills-intelligence"
version = "0.5.1"
edition = "2021"
description = "Intelligent skill recommendations based on usage patterns and project context."
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "README.md"
keywords = ["mcp", "skills", "recommendations", "analytics", "ai"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "fs"] }
reqwest = { workspace = true, features = ["json"] }
walkdir.workspace = true
toml.workspace = true
dirs.workspace = true
regex.workspace = true
tracing.workspace = true

# Additional dependencies for intelligence features
chrono = { version = "0.4", features = ["serde"] }
trigram = "0.4"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
serial_test = "3.0"
proptest = "1.4"
skrills_test_utils = { path = "../test-utils", version = "0.5.1" }
