[package]
name = "skrills-server"
version = "0.4.9"
edition = "2021"
description = "Core library for the skrills MCP server: discovery, filtering, manifest generation, and runtime control."
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "README.md"
keywords = ["mcp", "skills", "server", "manifest", "cli"]
categories = ["development-tools", "filesystem"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
rmcp.workspace = true
pastey.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
pathdiff.workspace = true
dirs.workspace = true
libc.workspace = true
inquire.workspace = true
sha2.workspace = true
base64.workspace = true
tempfile.workspace = true
notify = { version = "8", optional = true }
toml.workspace = true
semver.workspace = true
flate2.workspace = true
parking_lot.workspace = true
subtle = { version = "2.6", optional = true }
axum = { version = "0.8", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

skrills-subagents = { path = "../subagents", version = "0.4.9", optional = true }

skrills-discovery = { path = "../discovery", version = "0.4.9" }
skrills-state = { path = "../state", version = "0.4.9" }
skrills_sync = { path = "../sync", version = "0.4.9" }
skrills-validate = { path = "../validate", version = "0.4.9" }
skrills-analyze = { path = "../analyze", version = "0.4.9" }
skrills-intelligence = { path = "../intelligence", version = "0.4.9" }
shellexpand = "3"

[features]
# Enable subagents and HTTP transport by default so MCP exposes subagent tools
# and remote access capabilities out of the box.
default = ["watch", "subagents", "http-transport"]
watch = ["notify"]
subagents = ["skrills-subagents"]
http-transport = ["axum", "axum-server", "tower", "tower-http", "subtle"]
test-support = []

[dev-dependencies]
rmcp = { workspace = true, features = ["client", "transport-async-rw", "transport-child-process"] }
wiremock = "0.6"
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
