[package]
name = "skrills-server"
version = "0.7.2"
edition = "2021"
description = "Core library for the skrills MCP server: discovery, filtering, manifest generation, and runtime control."
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "README.md"
keywords = ["mcp", "skills", "server", "manifest", "cli"]
categories = ["development-tools", "filesystem"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
pathdiff.workspace = true
dirs.workspace = true
libc.workspace = true
inquire.workspace = true
base64.workspace = true
tempfile.workspace = true
notify = { version = "8", optional = true }
toml.workspace = true
semver.workspace = true
parking_lot.workspace = true
subtle = { version = "2.6", optional = true }
axum = { version = "0.8", optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
leptos = { version = "0.7", features = ["ssr"], optional = true }
leptos_axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "request-id", "propagate-header"], optional = true }
rcgen = { version = "0.14", optional = true }
x509-parser = { version = "0.18", optional = true }
time.workspace = true

skrills-subagents = { path = "../subagents", version = "0.7.2", optional = true }

skrills-discovery = { path = "../discovery", version = "0.7.2" }
skrills-state = { path = "../state", version = "0.7.2" }
skrills_sync = { path = "../sync", version = "0.7.2" }
skrills-validate = { path = "../validate", version = "0.7.2" }
skrills-analyze = { path = "../analyze", version = "0.7.2" }
skrills-intelligence = { path = "../intelligence", version = "0.7.2" }
skrills-metrics = { path = "../metrics", version = "0.7.2" }
skrills-dashboard = { path = "../dashboard", version = "0.7.2", optional = true }
shellexpand = "3"
regex = "1"
sha2.workspace = true
hex = "0.4.3"
indexmap = "2.13.0"

[features]
# Enable subagents and HTTP transport by default so MCP exposes subagent tools
# and remote access capabilities out of the box.
default = ["watch", "subagents", "http-transport", "dashboard"]
dashboard = ["skrills-dashboard"]
watch = ["notify"]
subagents = ["skrills-subagents"]
http-transport = ["axum", "axum-server", "tower", "tower-http", "subtle", "rcgen", "x509-parser", "leptos", "leptos_axum"]
test-support = []

[dev-dependencies]
rmcp = { workspace = true, features = ["client", "transport-async-rw", "transport-child-process"] }
wiremock = "0.6"
tokio-util = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
skrills_test_utils = { path = "../test-utils" }
chromiumoxide = { version = "0.9", default-features = false }
futures = "0.3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "3.0"
