[package]
name = "skrills-server"
version = "0.8.0"
edition = "2021"
description = "Core library for the skrills MCP server: discovery, filtering, manifest generation, and runtime control."
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "README.md"
keywords = ["mcp", "skills", "server", "manifest", "cli"]
categories = ["development-tools", "filesystem"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
skrills-snapshot = { path = "../snapshot", version = "0.8.0" }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
pathdiff.workspace = true
dirs.workspace = true
libc.workspace = true
inquire.workspace = true
base64.workspace = true
tempfile.workspace = true
notify = { version = "8", optional = true }
toml.workspace = true
parking_lot.workspace = true
subtle = { version = "2.6", optional = true }
axum = { version = "0.8", optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
leptos = { version = "0.7", features = ["ssr"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "request-id", "propagate-header"], optional = true }
rcgen = { version = "0.14", optional = true }
x509-parser = { version = "0.18", optional = true }
time.workspace = true

skrills-subagents = { path = "../subagents", version = "0.8.0", optional = true }

skrills-discovery = { path = "../discovery", version = "0.8.0" }
skrills-state = { path = "../state", version = "0.8.0" }
skrills_sync = { path = "../sync", version = "0.8.0" }
skrills-validate = { path = "../validate", version = "0.8.0" }
skrills-analyze = { path = "../analyze", version = "0.8.0" }
skrills-intelligence = { path = "../intelligence", version = "0.8.0" }
skrills-metrics = { path = "../metrics", version = "0.8.0" }
skrills-tome = { path = "../tome", version = "0.8.0" }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
skrills-dashboard = { path = "../dashboard", version = "0.8.0", optional = true }
shellexpand = "3"
regex = "1"
sha2.workspace = true
hex = "0.4.3"
indexmap = "2.13.0"

[features]
# Enable subagents and HTTP transport by default so MCP exposes subagent tools
# and remote access capabilities out of the box.
default = ["watch", "subagents", "http-transport", "dashboard"]
dashboard = ["skrills-dashboard"]
watch = ["notify"]
subagents = ["skrills-subagents"]
http-transport = ["axum", "axum-server", "tower", "tower-http", "subtle", "rcgen", "x509-parser", "leptos", "async-stream", "futures"]
test-support = []

[dev-dependencies]
rmcp = { workspace = true, features = ["client", "transport-async-rw", "transport-child-process"] }
wiremock = "0.6"
tokio-util = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
skrills_test_utils = { path = "../test-utils" }
chromiumoxide = { version = "0.9", default-features = false }
futures = "0.3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "3.0"
# Cold-window parity test (TASK-023): drives the TUI render path
# alongside the browser surface. Pinned to the workspace version used
# by `skrills-dashboard` to avoid double-resolution of widget types.
ratatui = "0.30"
