[package]
name = "skrills-snapshot"
version = "0.8.0"
edition.workspace = true
description = "Wire-format types for skrills cold-window real-time analysis (TUI + browser)"
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
keywords = ["mcp", "skills", "snapshot", "wire-format"]
categories = ["development-tools"]
publish = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
