[package]
name = "skrills-state"
version = "0.2.1"
edition = "2021"
description = "State management for skrills runtime options, pins, and persisted overrides."
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://github.com/athola/skrills/tree/master/book"
readme = "README.md"
keywords = ["mcp", "skills", "state", "config", "runtime"]
categories = ["development-tools", "config"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tempfile.workspace = true
tracing.workspace = true
dirs.workspace = true
