[package]
name = "skrills-state"
version = "0.8.0"
edition = "2021"
description = "State management for skrills runtime options, pins, and persisted overrides."
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "README.md"
keywords = ["mcp", "skills", "state", "config", "runtime"]
categories = ["development-tools", "config"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
dirs.workspace = true
rusqlite = { version = "0.39", features = ["bundled"] }
sha2.workspace = true

[dev-dependencies]
skrills_test_utils = { path = "../test-utils" }
