[package]
name = "skrills-subagents"
version = "0.5.5"
edition = "2021"
description = "Subagent MCP tools for the skrills server with pluggable backends."
license = "MIT"
authors = ["Skrills Maintainers"]
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "README.md"
keywords = ["mcp", "skills", "subagents", "agents", "ai"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
time.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tempfile.workspace = true
toml.workspace = true

skrills-discovery = { path = "../discovery", version = "0.5.2" }
skrills-state = { path = "../state", version = "0.5.2" }

[dev-dependencies]
wiremock = "0.6"
futures = "0.3"
regex = "1.0"
serial_test = "3.0"

[features]
default = []
