[package]
name = "skrills_test_utils"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared test utilities for skrills crates"
publish = false

[dependencies]
tempfile = "3"
skrills-snapshot = { path = "../snapshot", version = "0.8.0" }

[dev-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }
