[package]
name = "skrills-tome"
version = "0.7.3"
edition = "2021"
description = "Research API orchestration, caching, and knowledge graph for skrills."
license = "MIT"
repository = "https://github.com/athola/skrills"

[dependencies]
# Use workspace deps where possible
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
time.workspace = true
uuid.workspace = true
thiserror.workspace = true

# Tome-specific deps
rusqlite = { version = "0.38", features = ["bundled"] }
url = "2"

[dev-dependencies]
tempfile.workspace = true
