[package]
name = "skrills-tome"
version = "0.8.0"
edition = "2021"
description = "Research API orchestration, caching, and knowledge graph for skrills."
license = "MIT"
repository = "https://github.com/athola/skrills"

[dependencies]
# Use workspace deps where possible
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dirs.workspace = true
time.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
skrills-snapshot = { path = "../snapshot", version = "0.8.0" }

# Tome-specific deps
rusqlite = { version = "0.38", features = ["bundled"] }
strum = { version = "0.26", features = ["derive"] }
url = "2"

[dev-dependencies]
tempfile.workspace = true
