[package]
name = "skrills-validate"
version = "0.3.4"
edition.workspace = true
description = "Skill validation for Claude Code and Codex CLI"

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
regex = "1"
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
