[package]
name = "skrills-validate"
version = "0.5.1"
edition.workspace = true
description = "Skill validation for Claude Code and Codex CLI"
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://athola.github.io/skrills/"
readme = "../../README.md"
keywords = ["mcp", "skills", "validation", "linting", "cli"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
regex = "1"
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
